--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 Library/
 Temp/
 obj/
+bin/
 *.sln
 *.sln.meta
 *.suo
@@ -11,7 +12,6 @@ obj/
 *.unityproj
 *.DS_Store
 
-/Server
 
 
 /Assets/StreamingAssets/
